# bug-buddy

./: .cvsignore  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.STABLE_BRANCH  TODO  autogen.sh  bug-buddy.spec.in  configure.in  passwd
.deps/: bug-buddy-druid.P  gnome-crash.P
bugzilla/: Makefile.am  gnome.bugzilla  ximian.bugzilla
bugzilla/gnome/: Makefile.am  mostfreq  products
bugzilla/ximian/: Makefile.am  config  mostfreq  products
debian/: .cvsignore  Makefile.am  changelog  changelog.in  control  copyright  rules
docs/: Makefile.am
docs/C/: .cvsignore  Makefile.am  bug-buddy-C.omf  bug-buddy.sgml  bug-buddy.xml
docs/it/: bug-buddy.sgml
gentool/: gentool.m4
omf-install/: .cvsignore  Makefile.am
pixmaps/: .cvsignore  Makefile.am
po/: .cvsignore  ChangeLog  POTFILES.ignore  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hu.po  it.po  ja.po  ko.po  lt.po  lv.po  ms.po  nl.po  nn.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sv.po  (+10 more)
src/: .cvsignore  Debian.bts  GNOME.bts  Helix_Code.bts  Independent_Project.bts  KDE.bts  Makefile.am  bts-debian.c  bts.c  bts.h  bug-buddy.buddy  bug-buddy.c  bug-buddy.desktop  bug-buddy.desktop.in  bug-buddy.glade  bug-buddy.gladep  bug-buddy.h  bug-buddy.keys.in  bug-buddy.mime  bugzilla.c  bugzilla.h  config.c  ctree-combo.c  ctree-combo.h  distro-debian.c  distro-debian.h  distro-irix.c  distro-redhat.c  distro-redhat.h  distro.h  gdb-buddy.c  gdb-buddy.h  gdb-cmd  glade-druid.h  glade-strings.c  gnome-crash.c  gnome.appmap  gtk-combo-box.c  gtk-combo-box.h  helix-packages  (+9 more)
