SUBDIRS = po intl pixmaps src docs

agnomedir = $(datadir)/bug-buddy/bugzilla/gnome
agnome_DATA =

bugzilladir = $(datadir)/bug-buddy
bugzilla_DATA = \
	bugzilla/gnome.bugzilla	\
	bugzilla/gnome/config	\
	bugzilla/gnome/products

EXTRA_DIST = \
	bug-buddy.spec.in	\
	bug-buddy.spec		\
	xml-i18n-extract.in	\
	xml-i18n-merge.in	\
	xml-i18n-update.in	\
	$(bugzilla_DATA)
