dnl Configure script for bug-buddy

AC_INIT(src/bug-buddy.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(bug-buddy, 0.8)

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

GNOME_COMPILE_WARNINGS

AM_PATH_LIBGLADE(,,gnome)

ALL_LINGUAS="cs da de el es fr ga gl it ja nl no ro ru sv tr uk"
AM_GNOME_GETTEXT

AC_MSG_CHECKING(whether this is boc's machine)
if test -d /debian/var/state/apt/lists; then
    DEBIAN_ROOT="/debian"
    AC_SUBST(DEBIAN_ROOT)
    AC_MSG_RESULT(maybe)
else
    AC_MSG_RESULT(no)
fi

EXTRA_GNOME_CFLAGS=`gnome-config --cflags gnomeui gdk_pixbuf libglade xml`
EXTRA_GNOME_LIBS=`gnome-config --libs gnomeui gdk_pixbuf libglade xml`
AC_SUBST(EXTRA_GNOME_CFLAGS)
AC_SUBST(EXTRA_GNOME_LIBS)

AC_OUTPUT([
bug-buddy.spec
debian/changelog
Makefile
docs/Makefile
docs/C/Makefile
po/Makefile.in
intl/Makefile
debian/Makefile
pixmaps/Makefile
src/Makefile
])
