dnl Configure script for bug-buddy

AC_INIT(src/bug-buddy.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(bug-buddy, 0.9)

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT

dnl Check for new enough gnome-libs
CPPFLAGS_save=$CPPFLAGS
LDFLAGS_save=$LDFLAGS
CPPFLAGS=`gnome-config --cflags gnomeui`
LDFLAGS=`gnome-config --libs gnomeui`

AC_CHECK_LIB(gnomeui, gnome_window_icon_set_default_from_file, ,[
AC_MSG_ERROR(gnome-libs 1.0.59 or higher is required.)])

CPPFLAGS=$CPPFLAGS_save
LDFLAGS=$LDFLAGS_save

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

GNOME_COMPILE_WARNINGS

AM_PATH_LIBGLADE(,,gnome)

ALL_LINGUAS="ca cs da de el en_AU en_GB es fi fr ga gl it ja nl no pl ro ru sv tr uk"
AM_GNOME_GETTEXT

AC_MSG_CHECKING(whether this is boc's machine)
if test -d /debian/var/state/apt/lists; then
    DEBIAN_ROOT="/debian"
    AC_SUBST(DEBIAN_ROOT)
    AC_MSG_RESULT(maybe)
else
    AC_MSG_RESULT(no)
fi

EXTRA_GNOME_CFLAGS=`gnome-config --cflags gnomeui libglade xml`
EXTRA_GNOME_LIBS=`gnome-config --libs gnomeui libglade xml`
AC_SUBST(EXTRA_GNOME_CFLAGS)
AC_SUBST(EXTRA_GNOME_LIBS)

AC_OUTPUT([
bug-buddy.spec
debian/changelog
Makefile
docs/Makefile
docs/C/Makefile
po/Makefile.in
intl/Makefile
debian/Makefile
pixmaps/Makefile
src/Makefile
])
